[tool.poetry]
name = "glassgov-be"
version = "0.1.0"
description = "GlassGov backend flask server and psql db."
authors = ["david kan <davidkan717@gmail.com>", "jasmine nguyen <jasminenguyen290@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
sqlalchemy = "^2.0.43"
flask-sqlalchemy = "^3.1.1"
flask = "^3.1.2"
flask-migrate = "^4.0.7"
psycopg2-binary = "^2.9.9"
flask-cors = "^6.0.1"
flask-mail = "^0.10.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
respx = "^0.22.0"
freezegun = "^1.5.5"
faker = "^37.12.0"
requests = "^2.32.5"
transformers = "^4.57.1"
sentencepiece = "^0.2.1"
spacy = "^3.8.7"
torch = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
